--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Authors@R:
 Description: What the package does (one paragraph).
 License: What license is it under?
 Imports: 
+    bs4Dash,
     config (>= 0.3.1),
     golem (>= 0.3.2),
     magrittr,
