--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(check_file_names)
+export(create_menuItems)
 export(get_export_dates)
 export(process_data)
 export(read_client)
