--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,15 @@ export(check_file_names)
 export(get_export_dates)
 export(process_data)
 export(read_client)
+export(read_disabilities)
+export(read_domesticViolence)
+export(read_education)
+export(read_employment)
+export(read_enrollment)
+export(read_health)
+export(read_living)
+export(read_project)
+export(read_services)
 export(run_app)
 import(shiny)
 importFrom(golem,activate_js)
