--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,23 +2,38 @@ Package: ryha
 Title: An Amazing Shiny App
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
+    person("firstname", "lastname", , "your@email.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 License: What license is it under?
+Depends: 
+    R (>= 2.10)
 Imports: 
+    arrow,
     bs4Dash,
     config (>= 0.3.1),
+    DBI,
+    dm,
+    dplyr,
+    echarts4r,
+    fs,
+    glue,
     golem (>= 0.3.2),
+    htmlwidgets,
+    lubridate,
     magrittr,
-    shiny (>= 1.7.1)
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.1.2
+    purrr,
+    readr,
+    rlang,
+    RPostgres,
+    shiny (>= 1.7.1),
+    stringr,
+    tibble,
+    tidyr,
+    tools,
+    zip
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-Depends: 
-    R (>= 2.10)
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 7.1.2
