Added `read_exit()` fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(read_domesticViolence)
 export(read_education)
 export(read_employment)
 export(read_enrollment)
+export(read_exit)
 export(read_health)
 export(read_living)
 export(read_project)
