Mostly "Health" and "DV" work

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(get_export_dates)
 export(process_data)
 export(read_client)
 export(read_disabilities)
-export(read_domesticViolence)
+export(read_domestic_violence)
 export(read_education)
 export(read_employment)
 export(read_enrollment)
