--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(check_file_names)
 export(get_export_dates)
 export(process_data)
+export(read_benefits)
 export(read_client)
 export(read_disabilities)
 export(read_domestic_violence)
@@ -11,8 +12,11 @@ export(read_education)
 export(read_employment)
 export(read_enrollment)
 export(read_exit)
+export(read_export)
 export(read_health)
+export(read_income)
 export(read_living)
+export(read_organization)
 export(read_project)
 export(read_services)
 export(run_app)
