--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,32 +8,35 @@ License: What license is it under?
 Depends: 
     R (>= 2.10)
 Imports: 
-    arrow,
     bs4Dash,
     config (>= 0.3.1),
     DBI,
-    dm,
     dplyr,
     echarts4r,
     fs,
     glue,
     golem (>= 0.3.2),
-    htmlwidgets,
+    here,
+    janitor,
     lubridate,
     magrittr,
     purrr,
+    reactable,
     readr,
     rlang,
     RPostgres,
     shiny (>= 1.7.1),
+    shinyjs,
+    shinyWidgets,
     stringr,
     tibble,
     tidyr,
     tools,
+    waiter,
     zip
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.2
