--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: ryha
-Title: An Amazing Shiny App
-Version: 0.0.0.9000
-Authors@R: 
-    person("firstname", "lastname", , "your@email.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: What license is it under?
+Title: R Youth Homelessness Analyzer
+Version: 0.1.1
+Authors@R: c(
+    person("Michael", "Thomas", , "mthomas@ketchbrookanalytics.com", role = "aut"),
+    person("Trevin", "Flickinger", , "trevinflickinger@cohhio.org", role = "cre")
+  )
+Description: Shiny web application for visualizing HMIS data in the State
+    of Ohio.
+License: AGPL (>= 3)
 Depends: 
     R (>= 2.10)
 Imports: 
@@ -20,6 +23,7 @@ Imports:
     janitor,
     lubridate,
     magrittr,
+    markdown,
     purrr,
     reactable,
     readr,
