--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,6 @@ Depends:
 Imports: 
     bs4Dash,
     config (>= 0.3.1),
-    corrplot,
     DBI,
     dplyr,
     echarts4r,
@@ -21,10 +20,10 @@ Imports:
     glue,
     golem (>= 0.3.2),
     here,
+    htmlwidgets,
     janitor,
     lubridate,
     magrittr,
-    markdown,
     purrr,
     reactable,
     readr,
