--- a/.devcontainer/DockerfileDev
+++ b/.devcontainer/DockerfileDev
@@ -13,6 +13,8 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     libxml2-dev \
     # {httpgd} package requirement (VS Code development package)
     libfontconfig1-dev \
+    # Open Shiny app in VS Code Viewer
+    xdg-utils \
 && rm -rf /var/lib/apt/lists/*
 
 # Pin renv version
