Incorporate ProjectCoC.csv to the app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(read_income)
 export(read_living)
 export(read_organization)
 export(read_project)
+export(read_project_coc)
 export(read_services)
 export(run_app)
 import(shiny)
