Create read_funder function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(read_employment)
 export(read_enrollment)
 export(read_exit)
 export(read_export)
+export(read_funder)
 export(read_health)
 export(read_income)
 export(read_living)
