set github pages up

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,3 +49,4 @@ LazyData: true
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
 Config/Needs/website: rmarkdown
+URL: https://cohhio.github.io/ryha/
