--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -86,7 +86,7 @@ reference:
   contents:
   - link_section
   - link_data_standards_manual
-  - with_popover
+  - with_tooltip
   - validate_data
 - title: Other Functions
   contents: run_app
