--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(read_project)
 export(read_project_coc)
 export(read_services)
 export(run_app)
+import(markdown)
 import(shiny)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
