Dockerfile.Dev: Minor code style

--- a/.devcontainer/Dockerfile.Dev
+++ b/.devcontainer/Dockerfile.Dev
@@ -24,4 +24,4 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 # Pin renv version
 ENV RENV_VERSION 1.1.4
 RUN R -q -e "options(warn=2); install.packages('remotes')"
-RUN R -q -e "options(warn=2); remotes::install_version('renv', '${RENV_VERSION}')"
+RUN R -q -e "options(warn=2); remotes::install_version(package = 'renv', version = '${RENV_VERSION}')"
